create static/blog.css and fix errors related to it

--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -13,6 +13,6 @@
 <p class="date">
     Published {{ post.publish }} by {{ post.author }}
 </p>
-{{ post.body|truncateword:30|linebreaks }}
-{% endfor %}
+        {{ post.body|truncatewords:30|linebreaks }}
+    {% endfor %}
 {% endblock %}
