--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>{% block titlec%}{% endblock %}</title>
-    <link href="{% static " css/blog.css" %}" rel="stylesheet">
+    <link href="{% static 'css/blog.css' %}" rel="stylesheet">
 </head>
 
 <body>
