--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,18 +1,30 @@
-{% extends "blog/base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    {% extends "blog/base.html" %}
 
-{% block title %}My Blog{% endblock %}
-
-{% block content %}
-<h1>My Blog</h1>
-{% for post in posts %}
-<h2>
-    <a href="{{ post.get_absolute_url }}">
-        {{ post.title }}
-    </a>
-</h2>
-<p class="date">
-    Published {{ post.publish }} by {{ post.author }}
-</p>
-        {{ post.body|truncatewords:30|linebreaks }}
-    {% endfor %}
-{% endblock %}
+    {% block title %}My Blog{% endblock %}
+    
+    {% block content %}
+    <h1>My Blog</h1>
+    {% for post in posts %}
+    <h2>
+        <a href="{{ post.get_absolute_url }}">
+            {{ post.title }}
+        </a>
+    </h2>
+    <p class="date">
+        Published {{ post.publish }} by {{ post.author }}
+    </p>
+            {{ post.body|truncatewords:30|linebreaks }}
+        {% endfor %}
+        {% include "pagination.html" with page=posts %} 
+    {% endblock %} 
+</body>
+</html>
